# xpu-perf

byte_micro_perf/: client.py  perf_engine.py
byte_micro_perf/backends/INTEL/: provider_intel.py
byte_micro_perf/backends/INTEL/ops/: add_rms_norm.py  add_rms_norm_dynamic_quant.py  dequant_kv_cache.py  flash_attention.py  gemm.py  head_rms_norm.py  head_rms_norm_dynamic_quant.py  moe_gather.py  moe_gating_gemm.py  moe_quant_group_gemm.py  moe_scatter_dynamic_quant.py  moe_softmax_topk.py  moe_swiglu_dynamic_quant.py  quant_matmul.py  rms_norm.py  rotary_embedding.py  sage_attention_decode_page.py  sage_attention_page.py  scale_dynamic_quant.py  store_kv_cache.py  store_paged_kv_cache.py  swiglu_dynamic_quant.py
byte_micro_perf/core/: backend.py  engine.py  utils.py
byte_micro_perf/core/ops/: llm_ops.py
micro_perf/: perf_engine.py
micro_perf/backends/GPU/: provider_gpu.py
micro_perf/backends/GPU/ops/torch_exp_kernels/: gemm.py
micro_perf/backends/INTEL/: backend_intel.py  env_intel.py  provider_intel.py
micro_perf/backends/INTEL/ops/: add_rms_norm_dynamic_quant.py  dequant_kv_cache.py  flash_attention.py  flash_attention.py.bak  flash_attention.py.org  head_rms_norm.py  moe_gather.py  moe_gating_gemm.py  moe_quant_group_gemm.py  moe_quant_matmul.py  moe_scatter_dynamic_quant.py  moe_softmax_topk.py  moe_swiglu_dynamic_quant.py  quant_matmul.py  rms_norm.py  rotary_embedding.py  rotary_embedding.py.ipex_bak  sage_attention_decode_page.py  sage_attention_page.py  scale_dynamic_quant.py  store_kv_cache.py  store_paged_kv_cache.py  utils.py
micro_perf/backends/INTEL/ops/ipex/: add_rms_norm_dynamic_quant.py  head_rms_norm.py  moe_gather.py  moe_gating_gemm.py  moe_quant_group_gemm.py  moe_quant_group_gemm_combine.py  moe_quant_matmul.py  moe_scatter_dynamic_quant.py  moe_softmax_topk.py  moe_swiglu_dynamic_quant.py  quant_matmul.py  rms_norm.py  rotary_embedding.py  sage_attention_decode_page.py  sage_attention_page.py  scale_dynamic_quant.py  store_kv_cache.py  store_paged_kv_cache.py
micro_perf/backends/INTEL/ops/sycl_tla/: flash_attention.py  gemm.py  sage_attention_v1.py
micro_perf/backends/INTEL/ops/sycl_tla/kernels/bmg_gemm_launcher/: CMakeLists.txt  README.md
micro_perf/backends/INTEL/ops/sycl_tla/kernels/bmg_gemm_launcher/include/: bmg_gemm_configs.hpp
micro_perf/backends/INTEL/ops/sycl_tla/kernels/bmg_gemm_launcher/src/: bmg_gemm_instances.cpp  bmg_gemm_kernel.hpp  main.cpp
micro_perf/backends/INTEL/ops/torch/: add_rms_norm_dynamic_quant.py  dequant_kv_cache.py  flash_attention.py  gemm.py  (+5 more)
micro_perf/backends/INTEL/projects/: dist_profiler.py  profiler.py
micro_perf/core/: engine.py  utils.py
micro_perf/core/ops/: __init__.py  llm_ops.py  vector_activation_ops.py
micro_perf/workloads/basic/vector_activation_ops/: silu_ext.json
micro_perf/workloads/basic_intel/tensor_gemm_ops/: gemm.json
micro_perf/workloads/llm/igpu_ops/: attn_ops.json  moe_ops.json  norm_ops.json  quant_gemm_ops.json
torch_extension/silu_ext/: silu.sycl
(+11 files in other folders)
